Added comments explaining beginPath and offset

--- a/01_canvas/clickdraw.html
+++ b/01_canvas/clickdraw.html
@@ -7,8 +7,8 @@
   </style>
 
   <div>
-    <h1>00_canvas</h1>
-    <h2> <i> My Clickdraw Canvas </i> by tzhao2</h2>
+    <h1>01_canvas</h1>
+    <h2> <i> Our Clickdraw Canvas </i> by winWhen</h2>
     <button style="margin-bottom:10px" id="clearButton" >Clear</button>
     <button style="margin-bottom:10px" id="toggleButton">Toggle</button>
     <text> Current Mode: <text id="modeDisplay"></text> </text>
