--- a/01_canvas/clickdraw.html
+++ b/01_canvas/clickdraw.html
@@ -1,3 +1,8 @@
+<!-- weiWhen (Thomas Zhao and Weiwen Zhou)
+     SoftDev2 pd8
+     K01 -- and I want to Paint It Better
+     2019-01-31 -->
+
 <!DOCTYPE html>
 <html>
   <style>
