--- a/02_canvas/index.html
+++ b/02_canvas/index.html
@@ -1,3 +1,8 @@
+<!-- winWhen - Wei Wen Zhou, Thomas Zhao
+     SoftDev2 pd8
+     K02 -- Connecting the Dots
+     2019-02-04 -->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,14 +14,12 @@
     <body>
 
         <h1>Bonjour monde!</h1>
-        <h2>Demo</h2>
+        <h2>Demo -- <i>look at our canvas!</i></h2>
 
         <button id="clear" onclick="clear_canvas()">Clear</button>
 
         <div>
-            <canvas height="600" width="600" id="playground">
-                Stuff
-            </canvas>
+            <canvas height="600" width="600" id="playground"></canvas>
         </div>
 
         <script src="dotconn.js" type="text/javascript"> </script>
