--- a/04_canvas-dvd/index.html
+++ b/04_canvas-dvd/index.html
@@ -1,5 +1,12 @@
-<!DOCTYPE html>
+<!-- 
+     TheWarlocks
+     Sophia Xia, Thomas Zhao
+     SoftDev2 pd8
+     K04 -- What is it saving the screen from?
+     2019-02-07
+-->
 
+<!DOCTYPE html>
 <html lang="en">
   <!-- Clyde "Thluffy" Sinclair
        SoftDev pd0
@@ -32,7 +39,10 @@
     <button id="stop">
       STOP
     </button>
-  </div>  
+  </div>
+
+  <h2> TheWarlocks </h2>
+  <h3> Sophia Xia, Thomas Zhao </h3>
 
   <canvas width="500" height="500" id="playground">
   </canvas>
