--- a/09_svg/index.html
+++ b/09_svg/index.html
@@ -1,25 +1,22 @@
+<!-- Thomas Zhao
+     SoftDev pd9
+     K09 -- Connect the Dots
+     2019-03-13
+  -->
+
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Clyde "Thluffy" Sinclair
-       SoftDev pd0
-       K09 -- basic SVG work
-       2019-03-13w
-       HTML file for initial forays into SVG...
-    -->
 
   <head>
     <meta charset="utf-8"/>
-    <title>
-      basic SVG work
-    </title>
+    <title> basic SVG work </title>
   </head>
 
   <body>
-    <h1>
-      So Very Good
-    </h1>
+    <h1>So Very Good</h1>
+    <h2>K09 -- Connect the Dots <i> by tzhao2</i></h2>
 
-    <svg id="vimage" height="500" width="500" style="border: 1px solid;">
+    <svg xmlns="http://www.w3.org/2000/svg" id="vimage" height="500" width="500" style="border: 1px solid;">
     </svg>
 
     <button id="but_clear">
