finished the hw

--- a/21_js-mfr/index.html
+++ b/21_js-mfr/index.html
@@ -11,7 +11,44 @@
     <title> TZhao K21 </title>
 </head>
 <body>
-    <h1 style="text-align:center">Statistics from NYC School Demographics Data from 2006 to 2012</h1>
+    <h1 style="text-align:center;margin-bottom:0px">NYC School Demographics Data from 2006 to 2012</h1>
+    <h3 style="text-align:center;margin-top:2px">Just some information!</h3>
+
+    <div style="text-align:center">
+        <text>The total number of students enrolled in NYC public schools during the 2011-2012 school year is</text>
+        <text id="20112012_total" style="text-decoration:underline"></text>
+        <text>students.</text>
+    </div>
+
+    <br>
+
+    <div style="text-align:center">
+        <text>The total number of Asian students enrolled in NYC public schools during the 2011-2012 school year is</text>
+        <text id="asians" style="text-decoration:underline"></text>
+        <text>students.</text> <br>
+        <text>That is</text>
+        <text id="asian_percentage" style="text-decoration:underline"></text>
+        <text>%!</text>
+    </div>
+
+    <br>
+
+    <div style="text-align:center">
+        <text>The total number of males enrolled in NYC public schools during the 2011-2012 school year is</text>
+        <text id="boys" style="text-decoration:underline"></text>
+        <text>students.</text>
+        <text>That is </text>
+        <text id="boys_num" style="text-decoration:underline"></text>
+        <text>students.</text>
+        <text>That is</text>
+        <text id="boys_percentage" style="text-decoration:underline"></text>
+        <text>%.</text> <br>
+        <text>Meanwhile, the total number of females enrolled in NYC public schools during the 2011-2012 school year is</text>
+        <text id="girls_num" style="text-decoration:underline"></text>
+        <text>That is</text>
+        <text id="girls_percentage" style="text-decoration:underline"></text>
+        <text>%.</text>
+    </div>
 
     <script src="http://d3js.org/d3.v5.min.js" charset="utf-8"></script>
     <script src="display.js"></script>
