oops forgot period

--- a/21_js-mfr/index.html
+++ b/21_js-mfr/index.html
@@ -45,6 +45,7 @@
         <text>%.</text> <br>
         <text>Meanwhile, the total number of females enrolled in NYC public schools during the 2011-2012 school year is</text>
         <text id="girls_num" style="text-decoration:underline"></text>
+	<text>students.</text>
         <text>That is</text>
         <text id="girls_percentage" style="text-decoration:underline"></text>
         <text>%.</text>
